# Python-for-data-science

./: README.md  cleanup_pycache.sh  run_all_exes.sh  run_ex_in_repo.sh  run_exes.sh  setup_pythonEnv.sh
Python 0/: README.md
Python 0/ex00/: Hello.py
Python 0/ex01/: format_ft_time.py
Python 0/ex02/: find_ft_type.py  tester.py
Python 0/ex03/: NULL_not_found.py  tester.py
Python 0/ex04/: whatis.py
Python 0/ex05/: building.py
Python 0/ex06/: filterstring.py  ft_filter.py
Python 0/ex07/: sos.py
Python 0/ex08/: tester.py
Python 00/ex00/: Hello.py
Python 00/ex01/: format_ft_time.py
Python 00/ex03/: tester.py
Python 00/ex04/: whatis.py
Python 00/ft_package/: __init__.py  count_in_list.py  pyproject.toml
Python00/: README.md
Python00/ex00/: Hello.py
Python00/ex01/: format_ft_time.py
Python00/ex02/: find_ft_type.py  tester.py
Python00/ex03/: NULL_not_found.py  tester.py
Python00/ex04/: whatis.py
Python00/ex05/: building.py
Python00/ex06/: filterstring.py  ft_filter.py
Python00/ex07/: sos.py
Python00/ex08/: Loading.py  tester.py
Python00/ex09/: LICENSE  README.md  pyproject.toml  tester.py
Python00/ex09/ft_package/: __init__.py  count_in_list.py
Python01/: README.md
Python01/ex0/: give_bmi.py  tester.py
Python01/ex00/: give_bmi.py  tester.py
Python01/ex01/: array2D.py  tester.py
Python01/ex02/: find_ft_type.py  load_image.py  tester.py
Python01/ex03/: load_image.py  tester.py  zoom.py
Python02/: README.md  requirements.txt
Python03/: README.md  requirement.txt
Python04/: README.md  requirement.txt
(+42 files in other folders)
