[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package for learning Python packaging"
authors = [
  { name="chunchun", email="youremail@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"